// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly available_today 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              data-locator="msgtextinbold"
              fontSize="fs14"
              fontWeight="extrabold"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              data-locator="infomsg"
              fontSize="fs12"
              fontWeight="regular"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_msg"
              textAlign="center"
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          labels={
            Object {
              "common": Object {
                "lbl_common_details": "",
              },
              "myPlaceRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            color="orange.800"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsBonus"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            color="primary.main"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsPoints"
          />
        </ForwardRef>
        <ForwardRef
          color="pink.500"
          component="span"
          fontSize="fs16"
          fontWeight="extrabold"
          mobileFontFamily="primary"
          text="lbl_bonusPoints_placeRewardsDay"
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
    isBag={false}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with applied to bag bonus point days 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              data-locator="msgtextinbold"
              fontSize="fs14"
              fontWeight="extrabold"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              data-locator="infomsg"
              fontSize="fs12"
              fontWeight="regular"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_msg"
              textAlign="center"
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={1}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApplied",
                "dataLocator": "appliedtoorderbtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          labels={
            Object {
              "common": Object {
                "lbl_common_details": "",
              },
              "myPlaceRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            color="orange.800"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsBonus"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            color="primary.main"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsPoints"
          />
        </ForwardRef>
        <ForwardRef
          color="pink.500"
          component="span"
          fontSize="fs16"
          fontWeight="extrabold"
          mobileFontFamily="primary"
          text="lbl_bonusPoints_placeRewardsDay"
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
    isBag={false}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with future Use 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              data-locator="msgtextinbold"
              fontSize="fs14"
              fontWeight="extrabold"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              data-locator="infomsg"
              fontSize="fs12"
              fontWeight="regular"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_msg"
              textAlign="center"
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          labels={
            Object {
              "common": Object {
                "lbl_common_details": "",
              },
              "myPlaceRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            color="orange.800"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsBonus"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            color="primary.main"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsPoints"
          />
        </ForwardRef>
        <ForwardRef
          color="pink.500"
          component="span"
          fontSize="fs16"
          fontWeight="extrabold"
          mobileFontFamily="primary"
          text="lbl_bonusPoints_placeRewardsDay"
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
    isBag={false}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with futureDisabled 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <React.Fragment>
          <ForwardRef>
            <ForwardRef
              data-locator="msgtextinbold"
              fontSize="fs14"
              fontWeight="extrabold"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_applyAnyDay"
              textAlign="center"
            />
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              data-locator="infomsg"
              fontSize="fs12"
              fontWeight="regular"
              mobileFontFamily="secondary"
              text="lbl_bonusPoints_msg"
              textAlign="center"
            />
          </ForwardRef>
        </React.Fragment>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn 15/7",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
              Object {
                "buttonText": "lbl_bonusPoints_ctaApply",
                "dataLocator": "availabletodaybtn",
                "disabled": false,
              },
              Object {
                "buttonText": "lbl_bonusPoints_futureUse",
                "dataLocator": "availableforfutureusebtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          labels={
            Object {
              "common": Object {
                "lbl_common_details": "",
              },
              "myPlaceRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            color="orange.800"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsBonus"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            color="primary.main"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsPoints"
          />
        </ForwardRef>
        <ForwardRef
          color="pink.500"
          component="span"
          fontSize="fs16"
          fontWeight="extrabold"
          mobileFontFamily="primary"
          text="lbl_bonusPoints_placeRewardsDay"
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
    isBag={false}
  />
</View>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with isUsed 1`] = `
<View>
  <CollapsibleContainer
    arrowPos={null}
    body={
      <ForwardRef
        spacingStyles="padding-top-SM"
      >
        <ForwardRef>
          <ForwardRef
            data-locator="infomsg"
            fontSize="fs12"
            fontWeight="regular"
            mobileFontFamily="secondary"
            text="lbl_bonusPoints_myRewardsUsedAll"
            textAlign="center"
          />
        </ForwardRef>
        <BonusPointsAvailability
          bonusDayAvailableToday={0}
          bonusPoints={
            Array [
              Object {
                "buttonText": "lbl_bonusPoints_usedOn ",
                "dataLocator": "usedonbtn",
                "disabled": true,
              },
            ]
          }
          className="availability-msg"
          enableApplyCta={false}
          getBonusDaysData={[Function]}
          labels={
            Object {
              "common": Object {
                "lbl_common_details": "",
              },
              "myPlaceRewards": Object {
                "lbl_bonus_points_apply_any_day": "",
                "lbl_bonus_points_msg": "",
                "lbl_place_rewards_bonus": "",
                "lbl_place_rewards_day": "",
                "lbl_place_rewards_points": "",
              },
            }
          }
          orderDetails={Object {}}
        />
        <ForwardRef
          accessibilityLabel=""
          anchorVariation="primary"
          className="details-link"
          customStyle={Object {}}
          dataLocator="detailslink"
          fontSizeVariation="medium"
          href="#"
          locator=""
          onPress={[Function]}
          text="lbl_bonusPoints_details"
          underline={true}
          visible={false}
        />
      </ForwardRef>
    }
    defaultOpen={false}
    getExpandedState={null}
    header={
      <ForwardRef
        className="elem-mb-SM"
        data-locator="bonuspointsdayhdr"
      >
        <ForwardRef>
          <ForwardRef
            color="orange.800"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsBonus"
          />
        </ForwardRef>
        <ForwardRef>
          <ForwardRef
            color="primary.main"
            component="span"
            fontSize="fs16"
            fontWeight="extrabold"
            mobileFontFamily="primary"
            text="lbl_bonusPoints_placeRewardsPoints"
          />
        </ForwardRef>
        <ForwardRef
          color="pink.500"
          component="span"
          fontSize="fs16"
          fontWeight="extrabold"
          mobileFontFamily="primary"
          text="lbl_bonusPoints_placeRewardsDay"
        />
      </ForwardRef>
    }
    height={null}
    iconLocator="arrowicon"
    index={null}
    isBag={false}
  />
</View>
`;
